build fixes 2
